Service Worker Updates

--- a/seguimiento_ciudadano/templates/seguimiento_ciudadano/base.html
+++ b/seguimiento_ciudadano/templates/seguimiento_ciudadano/base.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% load pwa %}
+{% load pwa %}
+{% load l10n %}
 <head>
-    {%  load static %}
+  {% load static %}
 
-    {% progressive_web_app_meta %}
+  {% progressive_web_app_meta %}
 
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seguimiento ciudadano - {% block title %} {% endblock %}</title>
-    <!-- static assets -->
-	<link rel="stylesheet" href="{% static 'seguimiento_ciudadano/css/bootstrap/css/bootstrap.css' %}">
-	<link rel="stylesheet" href="{% static 'seguimiento_ciudadano/css/lobe.css' %}">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Seguimiento ciudadano - {% block title %} {% endblock %}</title>
+  <!-- static assets -->
+  <link rel="stylesheet" href="{% static 'seguimiento_ciudadano/css/bootstrap/css/bootstrap.css' %}">
+  <link rel="stylesheet" href="{% static 'seguimiento_ciudadano/css/lobe.css' %}">
   <script src="{% static 'seguimiento_ciudadano/js/jquery-3.6.4.js' %}"></script>
-	<script src="{% static 'seguimiento_ciudadano/css/bootstrap/js/bootstrap.bundle.js' %}"></script>
-	<script defer src="{% static 'seguimiento_ciudadano/css/FontAwesomePro/all.js' %}"></script>
-	<script defer src="{% static 'seguimiento_ciudadano/js/lobe.js' %}"></script>
-	<link rel="stylesheet" href="{% static 'seguimiento_ciudadano/Fonts/AvenirNextPro/stylesheet.css' %}" />
-	<link rel="stylesheet" href="{% static 'seguimiento_ciudadano/Fonts/LabGrotesque/stylesheet.css' %}" />
-	<link rel="stylesheet" href="{% static 'seguimiento_ciudadano/css/animate.css' %}" />
+  <script src="{% static 'seguimiento_ciudadano/css/bootstrap/js/bootstrap.bundle.js' %}"></script>
+  <script defer src="{% static 'seguimiento_ciudadano/css/FontAwesomePro/all.js' %}"></script>
+  <script defer src="{% static 'seguimiento_ciudadano/js/lobe.js' %}"></script>
+  <link rel="stylesheet" href="{% static 'seguimiento_ciudadano/Fonts/AvenirNextPro/stylesheet.css' %}" />
+  <link rel="stylesheet" href="{% static 'seguimiento_ciudadano/Fonts/LabGrotesque/stylesheet.css' %}" />
+  <link rel="stylesheet" href="{% static 'seguimiento_ciudadano/css/animate.css' %}" />
   <link href="{% static 'seguimiento_ciudadano/js/DataTables/datatables.min.css' %}" rel="stylesheet">
   <script src="{% static 'seguimiento_ciudadano/js/DataTables/datatables.min.js' %}"></script>
 
 </head>
-  <body>
+
+<body>
   <div id="BodyWrapper">
     {% include 'seguimiento_ciudadano/navbar.html' %}
 
     <div class="allcontent">
       {% if messages %}
       <div class="toast-container position-fixed top-80px end-0 p-3">
-          <div id="liveToast" class="toast text-bg-success" role="alert" aria-live="assertive" aria-atomic="true">
-              <div class="toast-header text-bg-success">
-                  <strong class="me-auto">Notificación</strong>
-                  <small>ahora</small>
-                  <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-              </div>
-              <div class="toast-body">
-                  {% for message in messages %}
-                      {{ message }}
-                  {% endfor %}
-              </div>
+        <div id="liveToast" class="toast text-bg-success" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header text-bg-success">
+            <strong class="me-auto">Notificación</strong>
+            <small>ahora</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
+          <div class="toast-body">
+            {% for message in messages %}
+            {{ message }}
+            {% endfor %}
+          </div>
+        </div>
       </div>
       {% endif %}
       {% block content %}
@@ -50,6 +52,7 @@
     </div>
 
   </div>
-    {% include 'seguimiento_ciudadano/footer.html' %}
-  </body>
+  {% include 'seguimiento_ciudadano/footer.html' %}
+</body>
+
 </html>
