--- a/seguimiento_ciudadano/static/seguimiento_ciudadano/css/lobe.css
+++ b/seguimiento_ciudadano/static/seguimiento_ciudadano/css/lobe.css
@@ -173,6 +173,43 @@ body {
     transition: height 0.5s ease, box-shadow 0.3s ease;
 }
 
+.nav-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #333;
+    padding: 10px 0;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+  }
+  
+  .nav-item {
+    color: #fff;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .nav-item i {
+    margin-bottom: 5px;
+  }
+  
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border: 0;
+  }
+
 .header-menu-mobile .header-nav {
     position: relative;
     padding-top: 80px;
