--- a/seguimiento_ciudadano/templates/seguimiento_ciudadano/navbar.html
+++ b/seguimiento_ciudadano/templates/seguimiento_ciudadano/navbar.html
@@ -43,6 +43,30 @@
 
         </div>
     </div>
+    <div class="header-menu-mobile-bottom">
+        <nav class="nav-container">
+            <a href="#" class="nav-item">
+              <i class="fa fa-home fa-2x" aria-hidden="true"></i>
+              <span class="sr-only">Home</span>
+            </a>
+            <a href="#" class="nav-item">
+              <i class="fa fa-search fa-2x" aria-hidden="true"></i>
+              <span class="sr-only">Search</span>
+            </a>
+            <a href="#" class="nav-item">
+              <i class="fa fa-heart fa-2x" aria-hidden="true"></i>
+              <span class="sr-only">Favorites</span>
+            </a>
+            <a href="#" class="nav-item">
+              <i class="fa fa-user fa-2x" aria-hidden="true"></i>
+              <span class="sr-only">Profile</span>
+            </a>
+            <a href="#" class="nav-item">
+              <i class="fa fa-cog fa-2x" aria-hidden="true"></i>
+              <span class="sr-only">Settings</span>
+            </a>
+          </nav>
+    </div>
     <div class="header-content">
         <a class="header-logo" href="#">
             {%  load static %}
